fixed UX on the navbar covering page elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@
   margin: 0;
 }
 
+#main {
+  scroll-padding-top: 50px;
+}
 
 #header-nav {
 	background-color: var(--main-blue);
@@ -163,7 +166,7 @@ h1 {
 
 h2 {
   color: var(--main-black);
-  font-size: 2.5rem;
+  font-size: 4rem;
   border-bottom: 2px solid var(--main-black);
   margin-top: 20px;
   margin-bottom: 30px;
@@ -232,7 +235,9 @@ p {
 
 #contact {
   background-color: #2F2A29;
-  height: 100vh;
+  width: 100%;
+  height: 91.43vh;
+  padding-top: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
